Inizio costruzione e test dei commenti

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MvcCoseinutiliContext": "Server=DESKTOP-8HQ9L6S\\SQLEXPRESS01;Database=coseinutili;User Id=DESKTOP-8HQ9L6S\\pietro;Password=pietro;Integrated Security=True;MultipleActiveResultSets=true;Trust Server Certificate=True"
+    "MvcCoseinutiliContext": "Server=DESKTOP-8HQ9L6S\\SQLEXPRESS01;Database=coseinutili;User Id=DESKTOP-8HQ9L6S\\pietro;Password=pietro;Integrated Security=True;MultipleActiveResultSets=true;Trust Server Certificate=True",
+    "MvcCoseinutiliContextPortatile": "Server=DESKTOP-NESNJS3\\SQLEXPRESS;Database=coseinutili;User Id=DESKTOP-NESNJS3\\rocco;Password=pietro;Integrated Security=True;MultipleActiveResultSets=true;Trust Server Certificate=True"
   }
 }
